# VideoTrimmerAudioExtractor

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ffmpeg.rs  job_control.rs  lib.rs  main.rs  models.rs  playback.rs  process_util.rs  progress.rs  ytdlp.rs
src/components/: DependencyBanner.vue  ExportPanel.vue  ProgressBar.vue  SourcePanel.vue  TrimInputs.vue  TrimTimeline.vue  VideoPlayer.vue
src/services/: tauri.ts
src/stores/: mediaStore.ts
src/styles/: main.css
src/types/: media.ts
src/utils/: formats.ts  progress.ts  time.ts  videoFiles.ts  youtube.ts
src/utils/__tests__/: formats.test.ts  progress.test.ts  time.test.ts  videoFiles.test.ts  youtube.test.ts
