[package]
name = "video-trimmer-audio-extractor"
version = "0.1.0"
description = "Video trimmer with audio extraction"
authors = ["you"]
edition = "2021"

[lib]
name = "video_trimmer_audio_extractor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
